styles.css
.course-content ul.ned {
    margin: 0;
    list-style: none;
}

.course-content ul.ned li.section .content {
    margin: 0 40px;
}

.course-content ul.ned li.section .left,
.course-content ul.ned li.section .right {
    width: 40px;
    padding: 0 6px;
}

.course-content ul.ned li.section .right img.icon {
    padding: 0 0 4px 0;
}

.course-content ul.ned li.section .left {
    padding-top: 22px;
    text-align: right;
}

.jsenabled .course-content ul.ned li.section .left,
.jsenabled .course-content ul.ned li.section .right {
    width: auto;
}

.course-content ul.ned li.section .left .section-handle img.icon {
    padding: 0;
    vertical-align: baseline;
}

.course-content ul.ned li.section .section_action_menu .textmenu,
.course-content ul.ned li.section .section_action_menu .menu-action-text {
    white-space: nowrap;
}

/* Completion progress help */
.format-ned.path-course-view .course-content {
    position: relative;
}

/* Completion progress icon */
.format-ned.path-course-view .completionprogress {
    position: absolute;
    right: 60px;
    width: 16px;
}

.format-ned.path-course-view .completionprogresshelp {
    height: 40px;
}

.format-ned.path-course-view .completionprogress .helptooltip img {
    padding: 0;
}

.format-ned.path-course-view .completionprogress.nediconsleft {
    left: 6px;
}

/* Completion icons */
ul.ned .section .activity .actions {
    width: 18px;
}

.path-course-view ul.ned .section li.activity .actions form.togglecompletion .btn {
    border-width: 0;
    margin: 0;
    padding: 0;
}

/* nediconsleft */
ul.ned.nediconsleft .section .activity .actions {
    left: -25px;
}

/* sectioncontentjustification */
ul.ned.sectioncontentjustification .content {
    align-items: center;
    display: flex;
    flex-direction: column;
}

ul.ned.sectioncontentjustification .section .activity .actions {
    right: -10px;
}

/* Activity completion background */
.course-content ul.ned li.section .activity.completion-background {
    padding: .4em;
}

.course-content ul.ned li.section .activity.completion-background .mod-indent-outer {
    width: calc(100% - 34px);
}

.course-content ul.ned li.section .activity.completion-background .activityinstance {
    margin: 0;
    padding: 5px 15px 1px 10px;
}

.course-content ul.ned li.section .activity.completion-auto-fail .activityinstance,
.course-content ul.ned li.section .activity.completion-auto-n .activityinstance,
.course-content ul.ned li.section .activity.completion-auto-pass .activityinstance,
.course-content ul.ned li.section .activity.completion-auto-y .activityinstance,
.course-content ul.ned li.section .activity.completion-manual-n .activityinstance,
.course-content ul.ned li.section .activity.completion-manual-y .activityinstance,
.course-content ul.ned li.section .activity.completion-saved .activityinstance,
.course-content ul.ned li.section .activity.completion-submitted .activityinstance {
    border-radius: 10px;
}

/* Order for colours here is important to make sure the correct one is used. */
.course-content ul.ned li.section .activity.completion-manual-n .activityinstance,
.course-content ul.ned li.section .activity.completion-auto-n .activityinstance {
    background-color: #FFF;
    border: 1px solid #AEE5E3;
}

.course-content ul.ned li.section .activity.completion-submitted .activityinstance,
.course-content ul.ned li.section .activity.completion-waitinggrade .activityinstance {
    background-color: #FBFFDB;
    border: 1px solid #FBFFDB;
}

.course-content ul.ned li.section .activity.completion-auto-pass .activityinstance,
.course-content ul.ned li.section .activity.completion-auto-y .activityinstance,
.course-content ul.ned li.section .activity.completion-manual-y .activityinstance {
    background-color: #D0EFCF;
    border: 1px solid #D0EFCF;
}

.course-content ul.ned li.section .activity.completion-auto-fail .activityinstance {
    background-color: #F9E2E3;
    border: 1px solid #F9E2E3;
}

.course-content ul.ned li.section .activity.completion-background .actions {
    top: 7px;
}

/* Course settings. */
/* Makes items 'inline'. */
#fgroup_id_sectiondeliverymethodgroup .fgroup br.nedsep:nth-child(8),
#fgroup_id_sectiondeliverymethodgroup .fgroup br.nedsep:nth-child(13),
#fgroup_id_sectiondeliverymethodgroup .fgroup br.nedsep:nth-child(16) {
    display: none;
}

#fgroup_id_sectiondeliverymethodgroup .fgroup span:nth-child(3),
#fgroup_id_sectiondeliverymethodgroup .fgroup span:nth-child(5),
#fgroup_id_sectiondeliverymethodgroup .fgroup span:nth-child(7) {
    margin-left: 24px;
}

#fgroup_id_sectiondeliverymethodgroup .fgroup.error br.nedsep:nth-child(8),
#fgroup_id_sectiondeliverymethodgroup .fgroup.error br.nedsep:nth-child(13),
#fgroup_id_sectiondeliverymethodgroup .fgroup.error br.nedsep:nth-child(16) {
    display: inline;
}
#fgroup_id_sectiondeliverymethodgroup .fgroup.error br.nedsep:nth-child(10),
#fgroup_id_sectiondeliverymethodgroup .fgroup.error br.nedsep:nth-child(15),
#fgroup_id_sectiondeliverymethodgroup .fgroup.error br.nedsep:nth-child(18) {
    display: none;
}

#fgroup_id_sectiondeliverymethodgroup .fgroup.error span:nth-child(3),
#fgroup_id_sectiondeliverymethodgroup .fgroup.error span:nth-child(5),
#fgroup_id_sectiondeliverymethodgroup .fgroup.error span:nth-child(7) {
    margin-left: 0;
}

#fgroup_id_sectiondeliverymethodgroup .fgroup.error span:nth-child(5),
#fgroup_id_sectiondeliverymethodgroup .fgroup.error span:nth-child(7),
#fgroup_id_sectiondeliverymethodgroup .fgroup.error span:nth-child(9) {
    margin-left: 24px;
}

#fgroup_id_sectiondeliverymethodgroup .fgroup span {
    vertical-align: top;
}

/* Framed sections */

/* Absolute positioning system solution - keeps theme section content background and theme section highlight colour, but can make editing difficult to manage. */
/*
.ned-framedsections .section {
    position: relative;
}

.ned-framedsections .section .footer,
.ned-framedsections .section .header {
    background-color: #9DBB61;
    padding: 0 40px;
}

.ned-framedsections .section .left,
.ned-framedsections .section .right {
    background-color: #9DBB61;
    float: none;
    height: 100%;
    position: absolute;
    top: 0;
}

.ned-framedsections .section .left {
    left: 0;
}

.course-content ul.ned.ned-framedsections li.section .left {
    padding-top: 0;
}

.ned-framedsections .section .right {
    right: 0;
}
*/

/* Set the background colour of the li.section - less to style and no adaption for editing but format has to set the section content background and highlight colour. */
ul.ned-framedsections .section.main {
    background-color: #9DBB61;
}

.course-content ul.ned-framedsections .section.main .content {
    background-color: #fff;
    margin: 0 20px;
}

.course-content ul.ned-framedsections .section.main .header {
    margin-left: 20px;
    margin-right: 20px;
}

.course-content ul.ned-framedsections .section.main .header,
.course-content ul.ned-framedsections .section.main .footer {
    min-height: 20px;
}

.course-content ul.ned-framedsections .section.main.current .content {
    background-color: #ffe7aa;
}

.course-content ul.ned-framedsections ul.section {
    margin-top: 0;
}

.course-content ul.ned.ned-framedsections li.section .left,
.course-content ul.ned.ned-framedsections li.section .right {
    padding: 0;
    width: 20px;
}

.editing .course-content ul.ned-framedsections .section.main .content {
    margin: 0 40px;
}

.editing .course-content ul.ned.ned-framedsections li.section .left,
.editing .course-content ul.ned.ned-framedsections li.section .right {
    width: auto;
}

.editing ul.ned-framedsections .section .activity .mod-indent-outer {
    position: relative;
}

.course-content ul.ned-framedsections .section.main .content {
    padding-bottom: 5px;
    padding-left: 15px;
    padding-right: 15px;
}

.ned-framedsections .section .header .sectionname,
.ned-framedsections .section .header .sectionname a,
.ned-framedsections .section .header .sectionname a:hover,
.ned-framedsections .section .header .summary,
.ned-framedsections .section .left,
.ned-framedsections .section .right a.toggle-display,
.ned-framedsections .section .right a.toggle-display:hover {
    color: #fff;
}

.jsenabled .ned-framedsections .right .moodle-actionmenu[data-enhance] .toggle-display.textmenu .caret {
    border-top-color: #fff;
}
.ned-framedsections .section .header .sectionname {
    text-align: center;
}

.course-content .single-section .ned-framedsections.section-navigation {
    height: 20px;
}

